--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
   "name": "Operação Manequim",
-  "short_name": "Manequim",
+  "short_name": "Multiversy",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "1.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "icon-512.png",
+      "src": "1.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ]
 }
