--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Operação Manequim",
+  "name": "Multiversy",
   "short_name": "Multiversy",
   "start_url": "index.html",
   "display": "standalone",
